# theMatrix

./: README.md  package-lock.json
twitter_following_tracker/: .gitignore  README.md  api_test.py  database.py  pyproject.toml  requirements.txt  scheduler.py  slack_notifier.py  test_database.py  test_scheduled_task.py  test_scheduler.py  test_slack_integration.py  test_slack_notifier.py  test_tracker.py  test_user_manager.py  tracker.py  twitter_api.py  user_manager.py
twitter_following_tracker/app/: main.py
twitter_following_tracker/executable_packaging/: .gitignore  INSTALL.md  README.md  USER_GUIDE.md  package.json
twitter_following_tracker/executable_packaging/electron/: main.cjs  preload.cjs
twitter_following_tracker/frontend/: README.md  index.html  package.json
twitter_following_tracker/frontend/src/: App.tsx  types.ts
twitter_following_tracker/frontend/src/components/followings/: FollowingList.tsx
twitter_following_tracker/frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
twitter_following_tracker/frontend/src/components/ui/: empty-state.tsx  error.tsx  loading.tsx
twitter_following_tracker/frontend/src/components/users/: UserForm.tsx  UserList.tsx
twitter_following_tracker/frontend/src/hooks/: useNewFollowings.ts  useTrackedUsers.ts
twitter_following_tracker/frontend/src/services/: api.ts
twitter_following_tracker/packaged_backend/: twitter_alert_tool.py  twitter_alert_tool.spec
