[tool.poetry]
name = "twitter-alert-tool"
version = "0.1.0"
description = "A tool to track Twitter users' following lists and alert on new followings"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
httpx = "^0.25.0"
python-dotenv = "^1.0.0"
schedule = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
